--- a/application/modules/teacher/views/question/multichoice_fullpoint_edit.html
+++ b/application/modules/teacher/views/question/multichoice_fullpoint_edit.html
@@ -1,4 +1,4 @@
-<div class="tab-pane fade" id="<?php echo $type4  ?>">
+<div class="tab-pane fade <?php if(isset($type_id) && $type_id == $type4 ) echo 'active in'; ?>" id="<?php echo $type4  ?>">
 	<div class="span6">
 		<div class="page-header">
 			<h4>Nội dung câu hỏi</h4>
@@ -72,7 +72,7 @@
 					foreach($choices as $row){
 						$i++;
 				?>	
-				<div id="choice<?php echo $i ?>_<?php echo $type4  ?>_width"><?php echo change_to_letter($i).". ".$row['content'] ?></div>
+				<div id="choice<?php echo $i ?>_<?php echo $type4  ?>_width"><?php echo $i.". ".$row['content'] ?></div>
 				<?php
 					}
 				?>									
@@ -85,7 +85,7 @@
 					$i++;
 			?>
 			<fieldset id="<?php echo $i ?>_<?php echo $type4  ?>">
-				<label for="choice<?php echo $i ?>_<?php echo $type4  ?>">Lựa chọn 1</label>
+				<label for="choice<?php echo $i ?>_<?php echo $type4  ?>">Lựa chọn <?php echo $i ?></label>
 				<?php
 					if($i<4){
 				?>
