--- a/application/modules/teacher/views/question/multichoice_trad_edit.html
+++ b/application/modules/teacher/views/question/multichoice_trad_edit.html
@@ -1,4 +1,4 @@
-<div class="tab-pane fade active in" id="<?php echo $type1  ?>">
+<div class="tab-pane fade <?php if(isset($type_id) && $type_id == $type1 ) echo 'active in'; ?>" id="<?php echo $type1  ?>">
 	<div class="span6">
 		<div class="page-header">
 			<h4>Nội dung câu hỏi</h4>
