--- a/application/modules/teacher/views/question/tab_multichoice_question_type.html
+++ b/application/modules/teacher/views/question/tab_multichoice_question_type.html
@@ -1,11 +1,11 @@
 <ul id="myTab_multiple_choice" class="nav nav-tabs">
-	<li class="<?php if(isset($type_id) && $type_id != $type1) echo '';else echo 'active'; ?>"><a href="#<?php echo $type1  ?>" data-toggle="tab">Truyền
+	<li class="active"><a href="#<?php echo $type1  ?>" data-toggle="tab">Truyền
 			thống</a></li>
-	<li class="<?php if(isset($type_id) && $type_id == $type4) echo 'active'; ?>"><a id="tab_question" href="#<?php echo $type4  ?>"
+	<li><a id="tab_question" href="#<?php echo $type4  ?>"
 		data-toggle="tab">Điểm toàn phần</a></li>
-	<li class="<?php if(isset($type_id) && $type_id == $type5) echo 'active'; ?>"><a id="tab_question" href="#<?php echo $type5  ?>"
+	<li><a id="tab_question" href="#<?php echo $type5  ?>"
 		data-toggle="tab">Điểm từng phần</a></li>
-	<div class="toggle btn btn-primary <?php if(isset($shuffle) && $shuffle==0) echo 'off'; ?>" id="suffle" data-toggle="toggle">
+	<div class="toggle btn btn-primary" id="suffle" data-toggle="toggle">
 		<input type="checkbox" id="suffle_answer">
 		<div class="toggle-group">
 			<label class="toggle-on btn btn-primary">Xáo trộn thứ tự
