--- a/application/modules/teacher/views/question/quick_preview_question.html
+++ b/application/modules/teacher/views/question/quick_preview_question.html
@@ -16,10 +16,10 @@ function change_to_letter($number){
 	}						
 }
 ?>
-<div class="page-header" style="padding-bottom:10px;">
+<div class="page-header" style="padding-bottom:10px;width:91%;margin-bottom:0">
 	<h4 style="display:inline">Câu hỏi đã tạo</h4>							
 </div>
-<div class="span12">
+<div class="span12" style="width:91%;margin-left:0;border-right:none">
 	<p>
 		<?php echo $question_content ?>
 	</p>
