--- a/application/modules/teacher/views/question/manage_question.html
+++ b/application/modules/teacher/views/question/manage_question.html
@@ -8,13 +8,13 @@
 			<th>Loại câu hỏi</th>
 			<th>Có gợi ý</th>
 			<th>Số đáp án</th>
-			<th class="no_ku">Số KU</th>
-			<th class="no_skill">Số skill</th>
-			<th class="date_create">Ngày nhập</th>
-			<th class="date_edit">Ngày sửa cuối</th>
-			<th class="edit">Chỉnh sửa</th>
-			<th class="show_modal_preview">Xem nhanh</th>
-			<th class="delete">Xóa</th>
+			<th class="hide_show">Số KU</th>
+			<th class="hide_show">Số skill</th>
+			<th class="hide_show">Ngày nhập</th>
+			<th class="hide_show">Ngày sửa cuối</th>
+			<th class="hide_show">Chỉnh sửa</th>
+			<th class="hide_show">Xem nhanh</th>
+			<th class="hide_show">Xóa</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -30,13 +30,13 @@
 			<td style="text-align:center;"><?php echo $row['question_type_id'] ?></td>
 			<td style="text-align:center;"><?php echo ($row['hint'] && $row['hint']!="") ? "Có" : "Không" ?></td>
 			<td style="text-align:center;">0</td>
-			<td class="no_ku" style="text-align:center;">0</td>
-			<td class="no_skill" style="text-align:center;">0</td>
-			<td class="date_create"><?php echo $row['date_created'] ?></td>
-			<td class="date_edit"><?php echo $row['date_edited'] ?></td>
-			<td class="edit" style="text-align:center;"><a href="javascript:void()" class="btn btn-small btn-primary" onclick="edit('<?php echo $row['id'] ?>','<?php echo $row['question_type_id'] ?>')">Sửa</a></td>
-			<td class="show_modal_preview" style="text-align:center;"><a href="javascript:void()" role="button" class="btn btn-small btn-primary" onclick="show_modal(<?php echo $row['id'] ?>,'<?php echo $row['question_type_id'] ?>')" data-toggle="modal">Xem</a></td>
-			<td class="delete" style="text-align:center;"><a href="javascript:void()" role="button" class="btn btn-small btn-primary" onclick="delete_question(<?php echo $row['id'] ?>)" data-toggle="modal">Xóa</a></td>
+			<td class="hide_show" style="text-align:center;">0</td>
+			<td class="hide_show" style="text-align:center;">0</td>
+			<td class="hide_show"><?php echo $row['date_created'] ?></td>
+			<td class="hide_show"><?php echo $row['date_edited'] ?></td>
+			<td class="hide_show" style="text-align:center;"><a href="javascript:void()" class="btn btn-small btn-primary" onclick="edit('<?php echo $row['id'] ?>','<?php echo $row['question_type_id'] ?>')">Sửa</a></td>
+			<td class="hide_show" style="text-align:center;"><a href="javascript:void()" role="button" class="btn btn-small btn-primary" onclick="show_modal(<?php echo $row['id'] ?>,'<?php echo $row['question_type_id'] ?>')" data-toggle="modal">Xem</a></td>
+			<td class="hide_show" style="text-align:center;"><a href="javascript:void()" role="button" class="btn btn-small btn-primary" onclick="delete_question(<?php echo $row['id'] ?>)" data-toggle="modal">Xóa</a></td>
 		</tr>
 		<?php
 				}
