Finished Minimum Viable Version of Question - GUI and Functions

--- a/application/modules/teacher/views/question/quick_preview_question.html
+++ b/application/modules/teacher/views/question/quick_preview_question.html
@@ -17,7 +17,7 @@ function change_to_letter($number){
 }
 ?>
 <div class="page-header" style="padding-bottom:10px;width:91%;margin-bottom:0">
-	<h4 style="display:inline">Câu hỏi đã tạo</h4>							
+	<h4 style="display:inline">Câu hỏi <?php echo $question_id ?></h4>							
 </div>
 <div class="span12" style="width:91%;margin-left:0;border-right:none">
 	<p>
