--- a/application/modules/teacher/views/question/tab_question_type.html
+++ b/application/modules/teacher/views/question/tab_question_type.html
@@ -40,11 +40,13 @@
 	<?php
 		}
 	?>
-	<div class="alert" id="alert" style="display: none;">
-      <button type="button" class="close" data-dismiss="alert">×</button>
-      <strong>Bạn đã tạo câu hỏi thành công!</strong>
-   	</div>
-   	<div class="alert alert-error" id="error" style="display: none;">
+	<div id="alert" style="display:none;">
+		<div class="alert alert-success" style="display: none;">
+	      <button type="button" class="close" data-dismiss="alert">×</button>
+	      <strong>Bạn đã tạo câu hỏi thành công!</strong>
+	   	</div>
+   	</div>   	
+   	<div class="alert alert-error" style="display: none;">
       <button type="button" class="close" data-dismiss="alert">×</button>
       <strong>Có lỗi khi tạo câu hỏi!</strong>
    	</div>
